--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-query": "^3.12.0",
     "react-scripts": "4.0.2",
+    "react-text-truncate": "^0.16.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
