--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-query": "^3.12.0",
     "react-scripts": "4.0.2",
     "react-text-truncate": "^0.16.0",
+    "react-time-ago": "^6.2.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
